--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</article>
 		</main>
 		<footer>
-			<p>© 2022 P. Corey Culleton</p>
+			<p>&#169; 2022 P. Corey Culleton</p>
 		</footer>      
    </body>
 </html>
